버튼에 페이지 이동

--- a/html/home.html
+++ b/html/home.html
@@ -21,13 +21,20 @@
       <span class="team">Sparing</span>
     </div>
     <div class="right">
-      <botton class="btn" >Home</botton>
-      <botton class="btn">Member</botton>
-      <botton class="btn">News</botton>
-      <botton class="btn">Join us</botton>
+      <botton class="btn" onClick="location.href='home.html'">Home</botton>
+      <botton class="btn" onClick="location.href='index.html'">Member</botton>
+      <botton class="btn" onClick="location.href='news.html'">News</botton>
+      <botton class="btn" onClick="location.href='joinus.html'">Join us</botton>
 
     </div>
   </nav>
+  <div>
+    <div class="">
+
+    </div>
+</div>
+
+
 </body>
 
 </html>
