일단 간략하게 사진 넣기 section에 구역 배치 다시 구상하겠습니다

--- a/html/home.html
+++ b/html/home.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+  </style>
   <link rel="stylesheet" href="../css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -28,11 +30,20 @@
 
     </div>
   </nav>
-  <div>
-    <div class="">
 
-    </div>
+
+  <section class="team-section">  
+<div class="team-left">
+<img src="../img/head.PNG" class="team-img">
 </div>
+
+<div class="team-right">
+  <h1 class="team-h1"> Sparing</h1> 
+  <p class="team-des">팀 설명을 할거야 </p>
+  <p class="team-goal">우리팀의 목표를 적을거야</p>
+</div>
+</section>
+
 
 
 </body>
