--- a/html/news.html
+++ b/html/news.html
@@ -64,11 +64,10 @@
           <span class="team">Sparing</span>
         </div>
         <div class="right">
-          <botton class="btn" onClick="location.href='home.html'">Home</botton>
-          <botton class="btn" onClick="location.href='index.html'">Member</botton>
-          <botton class="btn" onClick="location.href='news.html'">News</botton>
-          <botton class="btn" onClick="location.href='joinus.html'">Join us</botton>
-    
+          <button class="btn" onClick="location.href='home.html'">Home</button>
+          <button class="btn" onClick="location.href='member.html'">Member</button>
+          <button class="btn" onClick="location.href='news.html'">News</button>
+          <button class="btn" onClick="location.href='joinus.html'">Join us</button>
         </div>
       </nav>
     </header>
