--- a/html/home.html
+++ b/html/home.html
@@ -8,11 +8,31 @@
   <link rel="stylesheet" href="../css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+  </style>
+  <script>
+    //join버튼 누를 시
+    $(document).ready(function () {
+      $("#join").click(function () {
 
+        if($(".enroll").is(":visible")){
+          $(".enroll").hide();
+          $("body").css("background-color","white");
+
+        }else{
+          $(".enroll").show();
+          $("body").css("background-color","rgba(0,0,0,.5)");
+        }
+      });
+    });
+
+  </script>
 </head>
 
 <body>
-
   <nav class="navbar">
     <div class="left">
       <img
@@ -24,17 +44,65 @@
       <botton class="btn" onClick="location.href='home.html'">Home</botton>
       <botton class="btn" onClick="location.href='index.html'">Member</botton>
       <botton class="btn" onClick="location.href='news.html'">News</botton>
-      <botton class="btn" onClick="location.href='joinus.html'">Join us</botton>
-
+      <button class="btn" id="join">Join us</button>
     </div>
   </nav>
-  <div>
-    <div class="">
-
+  <div class="main">
+    <img id="main_img" src="../img/head.PNG">
+    <div class="main_contents">
+      <p>Sparing</p>
+      <p>간략한 팀소개</p>
+      팀 소개 입니다.
+      <p>간단한 목표</p>
+      간단한 목표입니다.
     </div>
-</div>
-
-
+  </div>
+  <!-- 팝업 메뉴 -->
+  <div class="enroll">
+    <div class="info">
+      <label for="name_input">이름: </label>
+      <input type="text" id="name_input">
+    </div>
+    <div class="info">
+      <label for="mbti_input">MBTI: </label>
+      <input type="text" id="mbti_input">
+    </div>
+    <div class="info">
+      <label for="merit_input">장점: </label>
+      <input type="text" id="merit_input">
+    </div>
+    <div class="info">
+      <label for="leader">협업 스타일: </label>
+      <div class="info_radio">
+        <input type="radio" id="leader" name="coworker">
+        <label for="leader">Leader</label>
+        <input type="radio" id="follower" name="coworker">
+        <label for="follower">Follower</label>
+      </div>
+    </div>
+    <div class="info">
+      <label for="favorite_input">좋아하는 것: </label>
+      <input type="text" id="favorite_input">
+    </div>
+    <div class="info">
+      <label for="git_input">깃헙 주소: </label>
+      <input type="text" id="git_input">
+    </div>
+    <div class="info">
+      <label for="blog_input">블로그 주소: </label>
+      <input type="text" id="blog_input">
+    </div>
+    <div class="info">
+      <label for="profile">프로필 이미지를 선택하세요: </label>
+      <form method="post" enctype="multipart/form-data">
+        <div id="imagebox">
+        </div>
+        <input type="file" id="profile" accept="image/*">
+      </form>
+    </div>
+    <button class="input_btn">취소</button>
+    <button class="input_btn">등록</button>
+  </div>
 </body>
 
 </html>
