배포를 위한 파일명 변경

--- a/html/index.html
+++ b/html/index.html
@@ -130,7 +130,7 @@
       <span class="team">Sparing</span>
     </div>
     <div class="right">
-      <button class="btn" onClick="location.href='home.html'">Home</botton>
+      <button class="btn" onClick="location.href='index.html'">Home</botton>
         <button class="btn" onClick="location.href='member.html'">Member</botton>
           <button class="btn" onClick="location.href='news.html'">News</botton>
             <button class="btn" id="join">Join us</button>
