--- a/html/news.html
+++ b/html/news.html
@@ -68,7 +68,7 @@
           <span class="team">Sparing</span>
         </div>
         <div class="right">
-          <button class="btn" onClick="location.href='home.html'">Home</button>
+          <button class="btn" onClick="location.href='index.html'">Home</button>
           <button class="btn" onClick="location.href='member.html'">Member</button>
           <button class="btn" onClick="location.href='news.html'">News</button>
         </div>
