mbti_input 스타일 변경

--- a/html/home.html
+++ b/html/home.html
@@ -181,9 +181,9 @@
     <div class="info">
       <label for="leader">협업 스타일: </label>
       <div class="info_radio">
-        <input type="radio" name="coworker" value="leader">
+        <input type="radio" name="coworker" id="leader" value="leader">
         <label for="leader">Leader</label>
-        <input type="radio" name="coworker" value="follower">
+        <input type="radio" name="coworker" id="follower" value="follower">
         <label for="follower">Follower</label>
       </div>
     </div>
