목표 및 팀소개 수정

--- a/html/index.html
+++ b/html/index.html
@@ -141,9 +141,9 @@
     <div class="main_contents">
       <p>Sparing</p>
       <p>간략한 팀소개</p>
-      팀 소개 입니다.
+      <span>안녕하세요! 스프링 + 스파르타 = 스파링 입니다!</span>
       <p>간단한 목표</p>
-      간단한 목표입니다.
+      <span>포기할거면 잘 되서 포기하자!!!</span>
     </div>
   </div>
   <!-- 팝업 메뉴 -->
