--- a/html/member.html
+++ b/html/member.html
@@ -9,6 +9,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
     body {
@@ -334,6 +336,89 @@
       color: white;
     }
   </style>
+  <script type="module">
+    $(document).ready(function () {
+
+      //join버튼 누를 시
+      $("#join").click(function () {
+
+        if ($(".enroll").is(":visible")) {
+          $(".enroll").hide();
+          $("body").css("background-color", "white");
+
+        } else {
+          $(".enroll").show();
+          $("body").css("background-color", "rgba(0,0,0,.5)");
+        }
+      });
+
+      //취소 버튼 누를 시
+      $("#cancel").click(function () {
+        if ($(".enroll").is(":visible")) {
+          $(".enroll").hide();
+          $("body").css("background-color", "white");
+
+        } else {
+          $(".enroll").show();
+          $("body").css("background-color", "rgba(0,0,0,.5)");
+        }
+      });
+
+      //등록 버튼 누를 시
+      $('#register').click(async function () {
+        //파이어베이스에 데이터 전달(이름,mbti,장점,협업스타일,좋아하는것,깃헙주소,블로그 주소,프로필 이미지)
+        let name = $("#name_input").val();
+        let mbti = $("#mbti_input").val();
+        let merit = $("#merit_input").val();
+        let style = $('input:radio[name="coworker"]:checked').val();
+        let favorite = $("#favorite_input").val();
+        let git = $("#git_input").val();
+        let blog = $("#blog_input").val();
+        let profile = document.querySelector('#profile').files[0];
+        console.log(profile);
+        //스토리지에 이미지 저장
+        const storageRef = storage.ref(`images/${profile.name}`);
+        try {
+          // 파일을 Storage에 업로드
+          const snapshot = await storageRef.put(profile);
+          console.log("Uploaded a blob or file!", snapshot);
+
+          // 업로드 완료 후 다운로드 URL 가져오기
+          const downloadURL = await snapshot.ref.getDownloadURL();
+          console.log("File available at", downloadURL);
+
+          // Firestore에 URL 저장
+          await db.collection("member").add({
+            "name": name,
+            "mbti": mbti,
+            "merit": merit,
+            "style": style,
+            "favorite": favorite,
+            "git": git,
+            "blog": blog,
+            "profile": downloadURL
+          });
+          console.log("Image URL saved to Firestore!");
+
+        } catch (error) {
+          console.error("Error uploading image: ", error);
+        }
+        alert("등록되었습니다!");
+        //창 없애기
+        if ($(".enroll").is(":visible")) {
+          $(".enroll").hide();
+          $("body").css("background-color", "white");
+
+        } else {
+          $(".enroll").show();
+          $("body").css("background-color", "rgba(0,0,0,.5)");
+        }
+      });
+    });
+    let data = {
+
+    };
+  </script>
 </head>
 
 <body>
@@ -402,7 +487,7 @@
     </div>
     <div class="info">
       <label for="edit_merit">장점: </label>
-      <input type="text" id="edit_merit" name="merit" required>
+      <input type="text" id="edit_merit" name="merit">
     </div>
     <div class="info">
       <label>협업 스타일: </label>
@@ -440,6 +525,7 @@
     </div>
   </div>
 
+  
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
@@ -603,6 +689,7 @@
           const member = doc.data();
           document.getElementById('edit_name').value = member.name;
           document.getElementById('edit_mbti').value = member.mbti;
+          document.getElementById('edit_merit').value = member.merit; 
           document.getElementById(member.style === 'leader' ? 'edit_leader' : 'edit_follower').checked = true;
           document.getElementById('edit_favorite').value = member.favorite;
           document.getElementById('edit_git').value = member.git || '';
